# ChangeLog for sys-process/psmisc
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-process/psmisc/ChangeLog,v 1.100 2010/02/13 13:02:41 armin76 Exp $

  13 Feb 2010; Raúl Porcel <armin76@gentoo.org> psmisc-22.10.ebuild:
  alpha/arm/ia64/m68k/s390/sh/sparc stable wrt #304175

  13 Feb 2010; Samuli Suominen <ssuominen@gentoo.org> psmisc-22.10.ebuild:
  amd64 stable wrt #304175

  12 Feb 2010; Joseph Jezak <josejx@gentoo.org> psmisc-22.10.ebuild:
  Marked ppc/ppc64 stable for bug #304175.

  11 Feb 2010; Jeroen Roovers <jer@gentoo.org> psmisc-22.10.ebuild:
  Stable for HPPA (bug #304175).

  11 Feb 2010; Christian Faulhammer <fauli@gentoo.org> psmisc-22.10.ebuild:
  stable x86, bug 304175

*psmisc-22.10 (04 Jan 2010)

  04 Jan 2010; Samuli Suominen <ssuominen@gentoo.org> +psmisc-22.10.ebuild:
  Version bump.

  02 Jan 2010; Samuli Suominen <ssuominen@gentoo.org> psmisc-22.9.ebuild,
  +files/psmisc-22.9-locale.patch:
  Fix building with -O0 where glibc doesn't include locale.h by itself wrt
  #299316.

*psmisc-22.9 (02 Jan 2010)

  02 Jan 2010; Samuli Suominen <ssuominen@gentoo.org> +psmisc-22.9.ebuild:
  Version bump.

*psmisc-22.8-r1 (23 Dec 2009)

  23 Dec 2009; Samuli Suominen <ssuominen@gentoo.org>
  +psmisc-22.8-r1.ebuild, +files/psmisc-22.8-fuser-r159.patch:
  Fix segmentation fault with false options e.g. "fuser --help" wrt #297423
  and everything up to fuser.c Rev. 1.59, fuser.h Rev. 1.7.

*psmisc-22.8 (11 Dec 2009)

  11 Dec 2009; Samuli Suominen <ssuominen@gentoo.org> +psmisc-22.8.ebuild:
  Version bump wrt #296498.

  31 Oct 2009; Brent Baude <ranger@gentoo.org> psmisc-22.7.ebuild:
  Marking psmisc-22.7 ppc64 for bug 287739

  17 Oct 2009; Raúl Porcel <armin76@gentoo.org> psmisc-22.7.ebuild:
  arm/ia64/m68k/s390/sh stable wrt #287739

  17 Oct 2009; Tiago Cunha <tcunha@gentoo.org> psmisc-22.7.ebuild:
  stable sparc, bug 287739

  15 Oct 2009; Markus Meier <maekke@gentoo.org> psmisc-22.7.ebuild: