@@ -1,7 +1,7 @@
 AUX psmisc-22.5-no-nls.patch 736 RMD160 ac2c51cccc6c95f0aa47efe1ecaeb0d5eaefbce9 SHA1 0227573aa987bfb78ecef891673dc2792c98aba5 SHA256 b2137d22d62276cbd4a1b154c119df025d864054063302a91b5a1610f6c7102c
 DIST psmisc-22.10.tar.gz 314712 RMD160 cf0fa6985db0ac4c6b31b0a1af7cf47da2e5b6ba SHA1 20bfa81ec36603c6a141bd7e6137cf9d3b52c3d9 SHA256 e8c2a520549ec86deeccd55fd30cbb46fca20e57d7dfde240ee49df1c6dca053
-DIST psmisc-22.7.tar.gz 309178 RMD160 97341ce1953d2c226f01d92e952e7a001456be15 SHA1 8226ecc284c8cd1e151523df56a1ba9f9c0fa3f5 SHA256 049c874c3353798afe9223dde8450376bd8a5cc336f863fb9294238735d11dad
+DIST psmisc-22.11.tar.gz 375038 RMD160 a525b0d39bdfc5af0f5981c191e46953bce90d94 SHA1 5d3b9f15ffba3f98147223abbcf803405fd7b7ae SHA256 8fff37557f5150d89ef9afc03133731da3eaa2bad1a94f64355218a68b884536
 EBUILD psmisc-22.10.ebuild 1483 RMD160 49d1588657fa0c1745599ba6e8a409338d894c08 SHA1 aa9d15fefc1b7c6207fe59ea1cde964b505623d7 SHA256 8d5bd4e206efb9c4a25b1a444a99dfe4fdb502f7b5de2a6ce4bd17e730033233
-EBUILD psmisc-22.7.ebuild 1531 RMD160 1203b9a84d83589481e01e6a821a381399598d37 SHA1 630ad311a6706f65afdf4403772c1b6bf2c7936c SHA256 3b890ee7adbd4f4f961d6927e70911d52bdadc07ae749ecb309ac16679d8b011
-MISC ChangeLog 17732 RMD160 107c6041231474d12f356361038da5f1be6ef28f SHA1 c005144b166fc66e3b667fcc5a751eba1089d3a0 SHA256 3c91d689d5f06680367477047bc2574f1fa51d03a1219d9bbbcfbd06e9332bcf
+EBUILD psmisc-22.11.ebuild 1537 RMD160 0f11a834143225abfb887fd5cd58a57e1a808aa1 SHA1 04f09422476b4faf82d96f5a7e0e1c7e9d7a7d06 SHA256 c87a360852ba1f76f0683dffa4de416970cfa823fd668bff1b38624478c24285
+MISC ChangeLog 17868 RMD160 4123db6a26a0993b4a002cb317ee5bfd4102afdf SHA1 3954777ae2a372fb435c0842258779c50abfaf17 SHA256 1a5e147957e7bc38b838a9ac07a22158610147a173d7db3056c2490bdc727697
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
