@@ -1,6 +1,11 @@
 # ChangeLog for sys-process/psmisc
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-process/psmisc/ChangeLog,v 1.100 2010/02/13 13:02:41 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-process/psmisc/ChangeLog,v 1.101 2010/05/01 21:03:19 ssuominen Exp $
+
+*psmisc-22.11 (01 May 2010)
+
+  01 May 2010; Samuli Suominen <ssuominen@gentoo.org> +psmisc-22.11.ebuild:
+  Version bump wrt #318043.
 
   13 Feb 2010; Raúl Porcel <armin76@gentoo.org> psmisc-22.10.ebuild:
   alpha/arm/ia64/m68k/s390/sh/sparc stable wrt #304175
